--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 psutil==5.7.0
+pyside2==5.15.0
 urllib3==1.25.9
 furl==2.1.0
 certifi==2020.6.20
@@ -6,4 +7,3 @@ numpy>=1.19.0
 requests~=2.24.0
 beautifulsoup4~=4.9.1
 jsonschema~=3.2.0
-PyQt5~=5.15.0
