--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 psutil==5.7.0
 pyside2==5.15.2
-urllib3==1.25.9
+urllib3==1.26.5
 furl==2.1.0
 certifi==2020.6.20
 numpy>=1.19.0
-requests~=2.24.0
+requests~=2.25.1
 beautifulsoup4~=4.9.1
 jsonschema~=3.2.0
 rarfile~=4.0
+pyvis >=0.1.9
