--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 psutil>=5.7.0
-pyside2==5.15.2.1
+PySide6==6.4.1
 urllib3==1.26.8
 furl==2.1.3
 certifi==2021.10.8
@@ -8,4 +8,4 @@ requests==2.27.1
 beautifulsoup4==4.10.0
 jsonschema==4.4.0
 rarfile~=4.0
-nodegraphqt>=0.1.7
+nodegraphqt==0.1.7
