--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ PySide6==6.6.0
 urllib3==1.26.19
 furl==2.1.3
 certifi==2024.7.4
-numpy>=1.19.0
+# numpy>=1.19.0
 requests==2.32.2
 # beautifulsoup4==4.12.2
 jsonschema==4.17.3
