--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macos-latest]
+        os: [macos-latest, windows-latest]
         python-version: ['3.11', '3.14']
 
     steps:
@@ -24,7 +24,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        python -m pip install tools/nodegraph/*.whl
+        python -m pip install tools/nodegraph/nodegraphqt-0.1.7-py3-none-any.whl
     - name: Run tests
       run: |
         python -m unittest discover zoia_lib/tests/ -v
